tests/compile-fail/integration_suite__integration__ecl_features__reg_as_positional_arg0.snap
---
source: tests/integration/ecl_features.rs
expression: stderr
---
error: argument must be a compile-time constant
  ┌─ <input>:6:16
  │
6 │     hasMsgArg0($REG[20], 3, 3);
  │                ^^^^^^^^ not constant
  │
  = because the argument is a timeline arg0


